@startuml ProfileManagementDesignClassDiagram

' Hide empty members
hide empty members

' Define packages for layered architecture
package "Boundary" {
    class ProfileController {
        +ResponseEntity<ProfileDTO> getProfileByUserId(Long userId)
        +ResponseEntity<ProfileDTO> updateUserProfile(Long userId, @Valid ProfileDTO profileDTO)
    }
}

package "Service" {
    interface ProfileService {
        +ProfileDTO findProfileByUserId(Long userId)
        +ProfileDTO saveUserProfile(Long userId, ProfileDTO profileDTO)
    }

    class ProfileServiceImpl implements ProfileService {
        -UserRepository userRepository
        -ProfileRepository profileRepository
        +ProfileDTO findProfileByUserId(Long userId)
        +ProfileDTO saveUserProfile(Long userId, ProfileDTO profileDTO)
    }
}

package "Repository (DAO)" {
    interface UserRepository extends JpaRepository<User, Long> {
        +Optional<User> findByUsername(String username)
    }

    interface ProfileRepository extends JpaRepository<Profile, Long> {
        +Optional<Profile> findByUserId(Long userId)
    }
}

package "Entity" {
    class User <<@Entity>> {
        +Long id
        +String username
        +String password
        +String email
        +String role
        +Profile profile
    }

    class Profile <<@Entity>> {
        +Long id
        +String fullName
        +LocalDate dateOfBirth
        +String gender
        +Double height
        +Double weight
        +String activityLevel
        +String allergies
        +String medicalConditions
        +User user
    }
}

package "DTO" {
    class ProfileDTO {
        +String username
        +String email
        +String fullName
        +LocalDate dateOfBirth
        +String gender
        +Double height
        +Double weight
        +String activityLevel
        +String allergies
        +String medicalConditions
    }
}

' Define relationships
ProfileController ..> ProfileService : uses
ProfileServiceImpl ..> UserRepository : uses
ProfileServiceImpl ..> ProfileRepository : uses

ProfileService ..> ProfileDTO : uses
ProfileController ..> ProfileDTO : uses

' Entity relationships
User "1" -- "1" Profile : (owns)
Profile "1" -- "1" User : (belongs to)

@enduml
